// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderCheckMarkCell should render a HeaderCheckMarkCell 1`] = `
<div
  className="header-cell"
  role="columnheader"
>
  <div
    className="container"
  >
    <div
      aria-label="test text"
      className="checkmark"
      hidden={false}
      onBlur={[Function]}
      onFocus={[Function]}
    />
  </div>
</div>
`;

exports[`HeaderCheckMarkCell should render a HeaderCheckMarkCell as selectable 1`] = `
<div
  className="header-cell is-interactable"
  data-cell-show-focus={true}
  onBlur={[Function]}
  onMouseDown={[Function]}
  role="columnheader"
>
  <div
    className="container"
  >
    <div
      aria-checked={false}
      aria-label="test text"
      className="checkmark"
      hidden={false}
      onBlur={[Function]}
      onFocus={[Function]}
      role="checkbox"
      tabIndex="0"
    />
  </div>
</div>
`;

exports[`HeaderCheckMarkCell should render a HeaderCheckMarkCell as selectable disabled 1`] = `
<div
  className="header-cell"
  role="columnheader"
>
  <div
    className="container"
  >
    <div
      aria-checked={false}
      aria-disabled={true}
      aria-label="test text"
      className="checkmark is-disabled"
      hidden={false}
      onBlur={[Function]}
      onFocus={[Function]}
      role="checkbox"
      tabIndex="-1"
    />
  </div>
</div>
`;

exports[`HeaderCheckMarkCell should render a HeaderCheckMarkCell as selectable with selection 1`] = `
<div
  className="header-cell is-interactable"
  data-cell-show-focus={true}
  onBlur={[Function]}
  onMouseDown={[Function]}
  role="columnheader"
>
  <div
    className="container"
  >
    <div
      aria-checked={true}
      aria-label="test text"
      className="checkmark is-selected"
      hidden={false}
      onBlur={[Function]}
      onFocus={[Function]}
      role="checkbox"
      tabIndex="0"
    />
  </div>
</div>
`;

exports[`HeaderCheckMarkCell should render a HeaderCheckMarkCell as selectable with selection and disabled 1`] = `
<div
  className="header-cell"
  role="columnheader"
>
  <div
    className="container"
  >
    <div
      aria-checked={true}
      aria-disabled={true}
      aria-label="test text"
      className="checkmark is-selected is-disabled"
      hidden={false}
      onBlur={[Function]}
      onFocus={[Function]}
      role="checkbox"
      tabIndex="-1"
    />
  </div>
</div>
`;

exports[`HeaderCheckMarkCell should render a HeaderCheckMarkCell as selectable with selection and indeterminate 1`] = `
<div
  className="header-cell is-interactable"
  data-cell-show-focus={true}
  onBlur={[Function]}
  onMouseDown={[Function]}
  role="columnheader"
>
  <div
    className="container"
  >
    <div
      aria-checked="mixed"
      aria-label="test text"
      className="checkmark is-selected is-intermediate"
      hidden={false}
      onBlur={[Function]}
      onFocus={[Function]}
      role="checkbox"
      tabIndex="0"
    />
  </div>
</div>
`;

exports[`HeaderCheckMarkCell should render a HeaderCheckMarkCell as selectable with selection, indeterminate, and disabled 1`] = `
<div
  className="header-cell"
  role="columnheader"
>
  <div
    className="container"
  >
    <div
      aria-checked="mixed"
      aria-disabled={true}
      aria-label="test text"
      className="checkmark is-selected is-intermediate is-disabled"
      hidden={false}
      onBlur={[Function]}
      onFocus={[Function]}
      role="checkbox"
      tabIndex="-1"
    />
  </div>
</div>
`;

exports[`HeaderCheckMarkCell should render a HeaderCheckMarkCell with alignment 1`] = `
<div
  className="header-cell"
  role="columnheader"
>
  <div
    className="container"
    style={
      Object {
        "paddingBottom": "5px",
      }
    }
  >
    <div
      aria-label="test text"
      className="checkmark"
      hidden={false}
      onBlur={[Function]}
      onFocus={[Function]}
    />
  </div>
</div>
`;

exports[`HeaderCheckMarkCell should render a HeaderCheckMarkCell with child content 1`] = `
<div
  className="header-cell"
  role="columnheader"
>
  <div
    className="container"
  >
    <div
      aria-label="test text"
      className="checkmark"
      hidden={false}
      onBlur={[Function]}
      onFocus={[Function]}
    />
  </div>
</div>
`;

exports[`HeaderCheckMarkCell should render a HeaderCheckMarkCell with width inner container removed 1`] = `
<div
  className="header-cell"
  removeInner={true}
  role="columnheader"
>
  <div
    className="container"
  >
    <div
      aria-label="test text"
      className="checkmark"
      hidden={false}
      onBlur={[Function]}
      onFocus={[Function]}
    />
  </div>
</div>
`;

exports[`HeaderCheckMarkCell should render with callback functions 1`] = `
<div
  className="header-cell is-interactable"
  data-cell-show-focus={true}
  onBlur={[Function]}
  onClick={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  role="columnheader"
>
  <div
    className="container"
  >
    <div
      aria-checked={false}
      aria-label="test text"
      className="checkmark"
      hidden={false}
      onBlur={[Function]}
      onFocus={[Function]}
      role="checkbox"
      tabIndex="0"
    />
  </div>
</div>
`;
